<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.hero.HeroFragment">

    <ImageView
        android:id="@+id/ivBigImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />


    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_round_gray"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/white80"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBigImage" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center|center_horizontal">

            <TextView
                android:id="@+id/tvFullNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/full_name"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center|center_horizontal">

            <TextView
                android:id="@+id/tvPlaceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_of_birth"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/place_of_birth"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center|center_horizontal">

            <TextView
                android:id="@+id/tvGenderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/gender"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center|center_horizontal">

            <TextView
                android:id="@+id/tvRaceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/race"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/race"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center|center_horizontal">

            <TextView
                android:id="@+id/tvIntelligenceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intelligence"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIntelligence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/intelligence"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center|center_horizontal">

            <TextView
                android:id="@+id/tvStrengthTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strength"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvStrength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/strength"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center|center_horizontal">

            <TextView
                android:id="@+id/tvSpeedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/speed"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center|center_horizontal">

            <TextView
                android:id="@+id/tvDurabilityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/durability"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDurability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/durability"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center|center_horizontal">

            <TextView
                android:id="@+id/tvPowerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/power"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/power"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center|center_horizontal">

            <TextView
                android:id="@+id/tvCombatTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/combat"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCombat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/combat"
                android:textColor="@color/white80"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>